Update release version and notes

--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,6 +6,14 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item.is-active{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.21.1 (August 7, 2024)
+    .accordion-content{"data-tab-content" => ""}
+      %ul
+        %li
+          Type to select when assigning a submission to a reviewer.
+        %li
+          Bug fixes, minor improvements.
+  %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.21 (July 3, 2024)
     .accordion-content{"data-tab-content" => ""}
       %ul
@@ -27,7 +35,6 @@
           Update Rails version to 7.0.8.1.
         %li
           Bug fixes, minor improvements.
-
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.19 (November 15, 2023)
     .accordion-content{"data-tab-content" => ""}
