--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -23,5 +23,5 @@
         %li
           = button_to 'Log Out', destroy_saml_user_session_path, method: :delete, data: { turbo: "false" }, class: 'devise-dropdown-list-button button expanded'
 - else
-  %li
+  %li#log-in
     = button_to 'Log In', login_index_path, method: :get, data: { turbo: "false" }, class: 'devise-login-button button expanded'
